Closed
Bug 723525
Opened 14 years ago
Closed 14 years ago
Mark classes final or add virtual destructor in content/*
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: espindola, Assigned: espindola)
Details
Attachments
(1 file)
|
4.57 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
Currently builds with --enable-warnings-as-errors are broken with clang because of the warning/error
error: delete called on 'fooBar' that has virtual functions but non-virtual destructor [-Werror,-Wdelete-non-virtual-dtor]
This patch fixes some of them.
Attachment #593840 -
Flags: review?(jmuizelaar)
Comment 1•14 years ago
|
||
Comment on attachment 593840 [details] [diff] [review]
Mark classes final or add virtual destructor in content/*
I'm not a content peer, so I'm probably not the best reviewer for this. That being said I've submitted patches like this before and have never received any negative feedback so it's probably safe.
Attachment #593840 -
Flags: review?(jmuizelaar) → review+
| Assignee | ||
Comment 2•14 years ago
|
||
Comment 3•14 years ago
|
||
Assignee: nobody → respindola
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
You need to log in
before you can comment on or make changes to this bug.
Description
•