Bug 723525 - Mark classes final or add virtual destructor in content/*. r=jmuizelaar.